<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">
    <ImageView
        android:id="@+id/icon_notification"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="right"
        android:src="@drawable/holder"/>

    <ImageView
        android:id="@+id/icon_message"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="right"
        android:layout_marginRight="32dp"
        android:src="@drawable/holder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">


        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/holder"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/profile_header_content_description_user_image"
            android:scaleType="centerCrop"
            android:background="?android:attr/selectableItemBackground" />


        <!-- Profile Info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_header_text_username"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/profile_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_header_text_bio"
                android:textSize="14sp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/profile_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_header_text_followers"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
