<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/founded_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    app:cardCornerRadius="40dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Image Slider -->
        <androidx.viewpager2.widget.ViewPager2
            android:clickable="true"
            android:onClick="onPickImage"
            android:id="@+id/founded_photos_slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Take Another Photo Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/take_anotherphoto_button"
            android:onClick="onStartCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/button_border_white"
            android:text="@string/founded_button_take_another_photo"
            android:textColor="@android:color/black"
            android:elevation="0dp"
            android:stateListAnimator="@null" />

        <!-- Companion Info Inputs -->
        <AutoCompleteTextView
            android:id="@+id/companion_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/founded_hint_species"
            android:layout_marginTop="16dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/companion_found_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/founded_hint_found_date"
            android:layout_marginTop="16dp"
            android:inputType="date" />

        <EditText
            android:id="@+id/companion_found_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/founded_hint_found_place"
            android:layout_marginTop="16dp"
            android:inputType="text" />

        <!-- Task Tag (Yavru Hayvan / Evsiz Hayvan / Sahiplenme) -->
        <Spinner
            android:id="@+id/companion_task_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no" />

        <!-- Task Subtype (İlk spinner seçimine göre değişir) -->
        <Spinner
            android:id="@+id/companion_task_subtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no" />

        <!-- Save Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_companion_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRegisterCompanionClick"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/button_border_white"
            android:text="@string/founded_button_register_companion"
            android:textColor="@android:color/black"
            android:elevation="0dp"
            android:stateListAnimator="@null" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
